--- a/Drum Machine/style.scss
+++ b/Drum Machine/style.scss
@@ -11,4 +11,7 @@ $primary-color: #f1f1f1;
 body {
   height: 100vh;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
